# vintagestory-server

./: .claude_settings.json  .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .mcp.json  .mise.toml  .yamllint.yaml  CLAUDE.md  Dockerfile  Justfile  README.md  conductor.json  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  project-context.md  renovate.json
.beads/: PRIME.md  issues.jsonl
.claude/: settings.json
.opencode/: opencode.jsonc
.serena/: project.yml
_bmad-output/: bmm-workflow-status.yaml
agentdocs/: caching-patterns.md  fastapi-websocket-patterns.md  server-layout.md  (+10 more)
api/: pyproject.toml
api/src/vintagestory_api/: __init__.py  config.py  main.py
api/src/vintagestory_api/jobs/: __init__.py  base.py  metrics_collection.py  mod_cache_refresh.py  server_versions.py
api/src/vintagestory_api/middleware/: __init__.py  auth.py  permissions.py  request_context.py
api/src/vintagestory_api/models/: __init__.py  console.py  errors.py  jobs.py  metrics.py  mods.py  responses.py  server.py  versions.py  ws_token.py
api/src/vintagestory_api/routers/: __init__.py  auth.py  config.py  console.py  debug.py  health.py  jobs.py  metrics.py  mods.py  server.py  test_rbac.py  versions.py  ws_token.py
api/src/vintagestory_api/services/: api_settings.py  cache_eviction.py  config_files.py  config_init.py  config_init_service.py  console.py  game_config.py  logs.py  metrics.py  mod_api.py  mod_state.py  mods.py  pending_restart.py  scheduler.py  server.py  versions_cache.py  ws_token_service.py
api/src/vintagestory_api/templates/: serverconfig-template.json
api/tests/: conftest.py  test_api_settings.py  test_auth.py  test_cache_eviction.py  test_config.py  test_config_files.py  test_config_init.py  test_config_init_service.py  test_console.py  test_debug_api.py  test_debug_gating.py  test_debug_logging.py  test_game_config.py  test_health.py  test_job_models.py  test_jobs_registration.py  test_jobs_router.py  test_logs_service.py  test_main.py  test_main_static_coverage.py  test_main_static_import.py  test_main_static_setup.py  test_metrics.py  test_metrics_api.py  test_metrics_edge_cases.py  test_metrics_job.py  test_mod_api.py  test_mod_models.py  test_mod_service.py  test_mod_state.py  test_mod_state_coverage.py  test_mods_router.py  test_pending_restart.py  test_permissions.py  test_rbac_integration.py  test_request_context.py  test_routers_config.py  test_runtime_debug_toggle.py  test_scheduler.py  test_server.py  (+10 more)
api/tests/console/: __init__.py  conftest.py  test_buffer.py  test_command_endpoint.py  test_coverage_additions.py  test_history_endpoint.py  test_logs_endpoint.py  test_logs_streaming.py  test_service_integration.py  test_websocket.py  test_websocket_helpers.py  test_websocket_token_auth.py
api/tests/e2e/: conftest.py  test_e2e_health.py
api/tests/jobs/: __init__.py  test_mod_cache_refresh.py  test_server_versions.py
api/tests/server/: conftest.py  test_coverage_additions.py  test_endpoints.py  test_install.py  test_install_endpoints.py  test_internal_methods.py  test_lifecycle.py  test_uninstall.py  test_validation.py  test_versions.py
(+424 files in other folders)
