[project]
name = "vintagestory-api"
version = "0.1.0"
description = "API for managing VintageStory dedicated game server"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.127.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vintagestory_api"]
