[project]
name = "vintagestory-api"
version = "0.1.0"
description = "API for managing VintageStory dedicated game server"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0,<4.0",
    "fastapi[standard]>=0.127.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "httpx-ws>=0.7.3",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "pytest-timeout>=2.3.1",
    "respx>=0.22.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 10

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "**/.pytest_cache", ".venv"]
typeCheckingMode = "strict"
reportMissingImports = "warning"
reportUndefinedVariable = "error"
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnusedFunction = "warning"
venvPath = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vintagestory_api"]
